sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:3: error: ')' expected but integer literal found.
  for (i <- getNombreValeurs()-1 down to 1) {
                                         ^AlgBubbleSort1:10: error: illegal start of simple expression
} 
^